Send kata solution route done
