# public/swagger.json
@@ -469,6 +469,70 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"FilesResponse": {
+				"properties": {
+					"files": {
+						"items": {
+							"properties": {
+								"size": {
+									"type": "string"
+								},
+								"mimetype": {
+									"type": "string"
+								},
+								"name": {
+									"type": "string"
+								}
+							},
+							"required": [
+								"size",
+								"mimetype",
+								"name"
+							],
+							"type": "object"
+						},
+						"type": "array"
+					},
+					"message": {
+						"type": "string"
+					},
+					"code": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"files",
+					"message",
+					"code"
+				],
+				"type": "object",
+				"description": "Uploaded files JSON response for Controllers"
+			},
+			"KataSolutionResponse": {
+				"properties": {
+					"filepaths": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"message": {
+						"type": "string"
+					},
+					"code": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"filepaths",
+					"message",
+					"code"
+				],
+				"type": "object",
+				"description": "Kata Solution JSON response for Controllers"
 			}
 		},
 		"securitySchemes": {
@@ -1768,7 +1832,7 @@
 								"schema": {
 									"anyOf": [
 										{
-											"$ref": "#/components/schemas/BasicResponse"
+											"$ref": "#/components/schemas/FilesResponse"
 										},
 										{
 											"$ref": "#/components/schemas/ErrorResponse"
@@ -1872,7 +1936,7 @@
 								"schema": {
 									"anyOf": [
 										{
-											"$ref": "#/components/schemas/BasicResponse"
+											"$ref": "#/components/schemas/KataSolutionResponse"
 										},
 										{
 											"$ref": "#/components/schemas/ErrorResponse"
