# src/controllers/interfaces/index.ts
@@ -3,7 +3,7 @@ import { Request } from 'express';
 import { IUserUpdate } from '../../domain/interfaces/IUser.interface';
 import { IAuthLogin, IAuthRegister } from '@/domain/interfaces/IAuth.interface';
 import { IKataStars, IKataUpdate, KataLevels } from '../../domain/interfaces/IKata.interface';
-import { BasicResponse, DateResponse, FilesResponse, AuthResponse, UserResponse, UsersResponse, KatasFromUserResponse, KataResponse, KatasResponse, ErrorResponse } from '../types';
+import { BasicResponse, DateResponse, FilesResponse, AuthResponse, UserResponse, UsersResponse, KatasFromUserResponse, KataResponse, KatasResponse, KataSolutionResponse, ErrorResponse } from '../types';
 
 
 export interface IHelloController {
@@ -51,5 +51,5 @@ export interface IKatasController {
     // eslint-disable-next-line no-undef
     updateKataFiles(file: Express.Multer.File[], id: string): Promise<FilesResponse | ErrorResponse>
     // Check Kata Solution
-    sendKataSolution(solution: string, id: string): Promise<BasicResponse | ErrorResponse>
+    sendKataSolution(solution: string, id: string): Promise<KataSolutionResponse | ErrorResponse>
 }
